@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 0.99_11 Not Released
  - Fix "whois" for participant who is not in any channels
+ - Fix removing IRC colors #281
  - Add more information to <convos-message-whois/>
 
 0.99_10 2016-09-14T23:35:31+0200
